chore: Actualización de archivos del proyecto
- Actualizado package.json con dependencia expo en raíz
- Modificaciones en screens (Login, Register, ServiceSelection)
- Actualizaciones en authService y tipos de navegación
- Cambios en App.tsx y database_schema.sql
- Eliminación de archivos iOS generados (se regeneran con Expo)

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "android": "cd mobile && npm run android",
     "ios": "cd mobile && npm run ios",
     "web": "cd mobile && npm run web"
+  },
+  "dependencies": {
+    "expo": "^54.0.30"
   }
 }
