--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handson-app",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --clear",
@@ -17,6 +17,8 @@
     "expo": "~54.0.0",
     "expo-asset": "~12.0.11",
     "expo-constants": "~18.0.12",
+    "expo-image-manipulator": "^14.0.8",
+    "expo-image-picker": "^17.0.10",
     "expo-location": "~19.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
