--- a/mobile/app.json
+++ b/mobile/app.json
@@ -2,7 +2,8 @@
   "expo": {
     "name": "HandsOn",
     "slug": "handson-app",
-    "version": "1.0.0",
+    "owner": "ecampazzo",
+    "version": "1.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -24,7 +25,7 @@
         "backgroundColor": "#4F46E5"
       },
       "package": "com.handson.app",
-      "versionCode": 1,
+      "versionCode": 2,
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION"
@@ -39,11 +40,13 @@
     },
     "extra": {
       "supabaseUrl": "https://kqxnjpyupcxbajuzsbtx.supabase.co",
-      "supabaseAnonKey": "sb_publishable_ztPj9JwZiHUO_CcW6VnSlA_BePbKtt0"
+      "supabaseAnonKey": "sb_publishable_ztPj9JwZiHUO_CcW6VnSlA_BePbKtt0",
+      "eas": {
+        "projectId": "6654f1d9-c2cb-4de2-973a-85f786d03a5f"
+      }
     },
     "plugins": [
       "expo-asset"
     ]
   }
 }
-
