--- a/web/package.json
+++ b/web/package.json
@@ -5,15 +5,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "npm run css:build",
     "build": "next build",
     "start": "next start",
+    "css:build": "tailwindcss -i ./src/app/globals.css -o ./public/styles.css --minify",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "^16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.39.3"
+    "@supabase/supabase-js": "^2.39.3",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
@@ -21,10 +26,7 @@
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.6.0",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^16.1.1",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "eslint-config-next": "^16.1.1"
   }
 }
 
