--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "HandsOn",
+    "name": "ofiSi",
     "slug": "handson-app",
     "owner": "ecampazzo",
     "version": "1.1.0",
