feat: Implementar términos y condiciones y mejoras en registro
- Agregar documentos legales (Términos y Condiciones y Política de Privacidad)
- Integrar documentos en la web (páginas /terminos y /privacidad)
- Agregar checkbox de aceptación de términos y condiciones en registro
- Implementar modal para leer términos y condiciones desde la app
- Corregir flujo de registro: todos los usuarios pasan por paso 3 (dirección/geolocalización)
- Mover checkbox de términos del paso 2 al paso 3
- Remover funcionalidad de carga de foto de perfil en registro (dejar para después de validar email)
- Mostrar icono genérico de usuario en lugar de opción de foto
- Agregar botón 'Volver al Login' en la parte inferior del registro
- Ajustar espaciado superior para evitar que cámara/notch oculte contenido
- Agregar permisos de cámara y almacenamiento en Android (app.json)
- Configurar plugin expo-image-picker con mensajes de permisos
- Actualizar API de expo-image-picker (remover MediaTypeOptions deprecado)
- Mejorar manejo de AppState para prevenir reinicios al abrir selector de imágenes
- Actualizar footer de la web: remover sección 'Para Proveedores' y agregar info de desarrollo
- Agregar información de empresa en footer (OyD SRL - La Rioja, Argentina)

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -28,7 +28,11 @@
       "versionCode": 2,
       "permissions": [
         "ACCESS_FINE_LOCATION",
-        "ACCESS_COARSE_LOCATION"
+        "ACCESS_COARSE_LOCATION",
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "READ_MEDIA_IMAGES"
       ]
     },
     "web": {
@@ -46,7 +50,14 @@
       }
     },
     "plugins": [
-      "expo-asset"
+      "expo-asset",
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "La aplicación necesita acceso a tus fotos para que puedas seleccionar una imagen de perfil.",
+          "cameraPermission": "La aplicación necesita acceso a tu cámara para que puedas tomar una foto de perfil."
+        }
+      ]
     ]
   }
 }
