--- a/web/package.json
+++ b/web/package.json
@@ -12,21 +12,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
+    "autoprefixer": "^10.4.0",
     "next": "^16.1.1",
+    "postcss": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.39.3",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "recharts": "^3.6.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.6.0",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^16.1.1"
+    "eslint-config-next": "^16.1.1",
+    "typescript": "^5.6.0"
   }
 }
-
