feat: mejoras UI/UX, notificaciones push y funcionalidad de portfolio
- UI/UX mejoras:
  * Ajustes de tamaño de fuente y layout en Mis Trabajos en Curso
  * Reorganización de botones en Mis Presupuestos
  * Reducción de tamaños de fuente en botones y tabs
  * Mejora en visualización de fecha programada

- Notificaciones:
  * Implementación de sistema de notificaciones push con expo-notifications
  * Integración con Supabase Realtime para notificaciones en tiempo real
  * Manejo de permisos y detección de Expo Go vs development builds
  * Eliminación de notificaciones duplicadas al aceptar cotizaciones

- Portfolio:
  * Corrección de uploadPortfolioPhotos para React Native (uso de ArrayBuffer)
  * Mejora en createPortfolioItem con fallback a inserción directa
  * Mejor manejo de errores y logging

- Cotizaciones:
  * Agregado campo 'incluye materiales' en responder solicitud
  * Visualización de información de materiales en cotizaciones del cliente
  * Corrección de mapeo de datos para mostrar materiales_incluidos

- Configuración:
  * Actualización de babel.config.js para react-native-reanimated
  * Instalación de react-native-worklets y dependencias necesarias
  * Configuración de expo-notifications en app.json

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -23,7 +23,8 @@
         "NSPhotoLibraryUsageDescription": "ofiSi necesita acceso a tu galería de fotos para que puedas seleccionar imágenes de perfil y documentar los trabajos realizados. Estas imágenes te ayudan a crear tu perfil profesional y mostrar tu trabajo a los clientes.",
         "NSLocationWhenInUseUsageDescription": "ofiSi necesita acceso a tu ubicación para conectarte con prestadores de servicios cercanos a tu área y mostrarte promociones disponibles en tu zona. Tu ubicación se utiliza únicamente para mejorar tu experiencia de búsqueda y no se comparte con terceros.",
         "NSLocationAlwaysAndWhenInUseUsageDescription": "ofiSi necesita acceso a tu ubicación para conectarte con prestadores de servicios cercanos a tu área y mostrarte promociones disponibles en tu zona. Tu ubicación se utiliza únicamente para mejorar tu experiencia de búsqueda y no se comparte con terceros."
-      }
+      },
+      "usesAppleSignIn": false
     },
     "android": {
       "adaptiveIcon": {
@@ -38,7 +39,9 @@
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
-        "READ_MEDIA_IMAGES"
+        "READ_MEDIA_IMAGES",
+        "RECEIVE_BOOT_COMPLETED",
+        "VIBRATE"
       ],
       "blockedPermissions": []
     },
@@ -74,7 +77,17 @@
           "isIosBackgroundLocationEnabled": false,
           "isAndroidBackgroundLocationEnabled": false
         }
-      ]
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#4F46E5",
+          "sounds": [],
+          "mode": "production"
+        }
+      ],
+      "@react-native-community/datetimepicker"
     ]
   }
 }
