--- a/mobile/app.json
+++ b/mobile/app.json
@@ -88,7 +88,9 @@
           "icon": "./assets/icon.png",
           "color": "#4F46E5",
           "sounds": [],
-          "mode": "production"
+          "mode": "production",
+          "iosDisplayInForeground": true,
+          "androidMode": "default"
         }
       ],
       "@react-native-community/datetimepicker"
