--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handson-app",
+  "name": "ofisi-app",
   "version": "1.3.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
