--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "ofiSí",
-    "slug": "ofisi-app",
+    "slug": "handson-app",
     "owner": "ecampazzo",
     "version": "1.3.0",
     "orientation": "portrait",
