--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,12 +28,12 @@
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "1.20.1",
+    "react-native-maps": "^1.26.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.7.1",
     "react-native-worklets-core": "^1.6.2",
     "yup": "^1.4.0"
   },
