--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ofisi-app",
-  "version": "1.3.0",
+  "version": "1.3.2",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --clear",
@@ -20,6 +20,7 @@
     "expo-constants": "~18.0.12",
     "expo-image-manipulator": "^14.0.8",
     "expo-image-picker": "^17.0.10",
+    "expo-linking": "^8.0.11",
     "expo-location": "~19.0.8",
     "expo-notifications": "^0.32.15",
     "expo-status-bar": "~3.0.9",
