feat: actualizar configuración de email y agregar documentación para publicación en stores
- Actualizar configuración de email en authService y LoginScreen
- Agregar documentación para publicación en App Store y Play Store
- Agregar guías de solución de errores y configuración
- Actualizar eas.json y app.json con nuevas configuraciones

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 5.2.0",
-    "appVersionSource": "remote"
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
@@ -9,17 +9,30 @@
       "distribution": "internal",
       "android": {
         "gradleCommand": ":app:assembleDebug"
+      },
+      "ios": {
+        "simulator": true
       }
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "ios": {
+        "simulator": false
       }
     },
     "production": {
       "android": {
-        "buildType": "apk"
+        "buildType": "app-bundle"
+      },
+      "ios": {
+        "simulator": false
+      },
+      "env": {
+        "EXPO_PUBLIC_SUPABASE_URL": "https://kqxnjpyupcxbajuzsbtx.supabase.co",
+        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "sb_publishable_ztPj9JwZiHUO_CcW6VnSlA_BePbKtt0"
       }
     }
   },
