--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,26 +15,26 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.89.0",
-    "expo": "~54.0.0",
+    "expo": "~54.0.31",
     "expo-asset": "~12.0.11",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-image-manipulator": "^14.0.8",
     "expo-image-picker": "^17.0.10",
     "expo-linking": "^8.0.11",
     "expo-location": "~19.0.8",
-    "expo-notifications": "^0.32.15",
+    "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-hook-form": "^7.49.3",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.26.20",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-native-worklets": "^0.7.1",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "yup": "^1.4.0"
   },
