--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,10 +3,10 @@
   "version": "1.3.3",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --clear",
+    "start": "CI=true expo start --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "CI=true expo start --web"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -15,14 +15,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@supabase/supabase-js": "^2.89.0",
-    "expo": "~54.0.31",
+    "expo": "^54.0.31",
     "expo-asset": "~12.0.11",
-    "expo-constants": "~18.0.13",
+    "expo-constants": "^18.0.13",
     "expo-image-manipulator": "^14.0.8",
     "expo-image-picker": "^17.0.10",
     "expo-linking": "^8.0.11",
     "expo-location": "~19.0.8",
-    "expo-notifications": "~0.32.16",
+    "expo-notifications": "^0.32.16",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-hook-form": "^7.49.3",
