--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,10 +3,14 @@
   "version": "1.3.3",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "CI=true expo start --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "CI=true expo start --web"
+    "start": "npx expo start --dev-client",
+    "build:apk": "cd android && ./gradlew clean && ./gradlew assembleRelease && cd ..",
+    "build:apk-gradle": "cd android && ./gradlew assembleRelease && cd ..",
+    "build:apk-standalone": "cd android && ./gradlew clean && ./gradlew assembleRelease && cd ..",
+    "apk": "npm run build:apk-gradle",
+    "apk:standalone": "./generar-apk-standalone.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -43,6 +47,7 @@
     "@types/react": "~19.1.10",
     "@types/react-native": "^0.72.8",
     "babel-preset-expo": "^54.0.8",
+    "cross-env": "^10.1.0",
     "sharp": "^0.34.5",
     "typescript": "~5.9.2"
   },
