--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,9 @@
   "description": "HandsOn Web - Landing Page and Admin Dashboard",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
-    "dev:turbo": "next dev --turbo",
-    "dev:legacy": "next dev --webpack",
+    "dev": "next dev --webpack -H localhost",
+    "dev:turbo": "next dev --turbo -H localhost",
+    "dev:legacy": "next dev --webpack -H localhost",
     "build": "next build",
     "start": "next start",
     "css:build": "tailwindcss -i ./src/app/globals.css -o ./public/styles.css --minify",
